--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="email_example">example@gmail.com</string>
     <string name="email">E-mail</string>
     <string name="password">Password</string>
+    <string name="enter_mail">Enter your E-mail</string>
 </resources>
